; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_db.c__db_set_key.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_db.c__db_set_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@set_key_stmt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_db_set_key(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @set_key_stmt, align 4
  %8 = call i32 @sqlite3_reset(i32 %7)
  %9 = load i32, i32* @set_key_stmt, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @sqlite3_bind_int(i32 %9, i32 1, i32 %10)
  %12 = load i32, i32* @set_key_stmt, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @sqlite3_bind_int(i32 %12, i32 2, i32 %13)
  %15 = load i32, i32* @set_key_stmt, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @sqlite3_bind_int(i32 %15, i32 3, i32 %16)
  %18 = load i32, i32* @set_key_stmt, align 4
  %19 = call i32 @sqlite3_step(i32 %18)
  ret void
}

declare dso_local i32 @sqlite3_reset(i32) #1

declare dso_local i32 @sqlite3_bind_int(i32, i32, i32) #1

declare dso_local i32 @sqlite3_step(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
